  ‘Pixel Size’ if it is present.
- Affine distortion: ACF of one image can be used to correct another image.
  Uncorrected lattice vectors can be entered numerically.
- PSIA: Rotated non-square images are imported correctly.
- Modules with a text output: Outputs are saved to text files with native
  line terminators.
- Pygwy console: Can be hidden by pressing Esc.

Other:
- A false colour gradient mimicking the MetroPro rainbow palette was added.
- Compatibility with Gtk+ 2.8, accidentally broken in 2.35, was restored.


2.35 (2014-03-02)
Application:
- A log of data modification operations is recorded for each channel and volume
  data. A viewer of data processing operation log is available in the
  right-click menus.  Logging can be enabled and disabled in the Edit menu.
- A workaround for toolbox menus disapparing in Unity was implemented.
- Translations updated: Czech, French, Russian.

Libraries:
- libgwyapp: Functions for logging of data processing operations were added.
- libgwyapp: Missing brick containers items were added to validation and file
  merging operations.
- libgwyprocess: gwy_data_field_grains_get_distribution() no longer incorrectly
  includes the no-grains value in the resulting distribution.
- libgwyddion: GwyStringList has new functions for clearing and adding a string
  with taking the ownership.
- libgwyprocess: A function for removing grains by number was added.
- libgwydgets: Graph window shows reasonable cursor coordinates with
  logscale axes.

Modules:
- Data processing, file and volume modules: Support for logging was added.
- Rank (new): Rank transform-based local constrast ehnancement presentation.
- OME TIFF (new): Import Opem Microscopy Environment (OME) TIFF files.
- Accurex II TXT (new): Imports Accurex II text data files.
- HDR image: 32bit and 64bit integer samples as well as 32bit and 64bit
  floating point samples are supported.  Plain BigTIFF images can be loaded.